--- a/class-components/package.json
+++ b/class-components/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview",
     "prepare": "cd .. && husky class-components/.husky",
     "format:fix": "prettier . --write",
-    "ci:format": "prettier . --check"
+    "ci:format": "prettier . --check",
+    "test": "vitest"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
@@ -33,7 +36,8 @@
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.2",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "vitest": "^2.0.2"
   },
   "lint-staged": {
     "*.ts": "npx tsc --noEmit",
